# tiny_lib

./: .gitignore  CMakeLists.txt  README.md  main.c
TH/: TH.h  THAllocator.c  THAllocator.h  THGeneral.c  THGeneral.h  THStorage.c  THStorage.h  THTensor.c  THTensor.h  THTensorApply.h  all_types.h  double_type.h  int_type.h
TH/generic/: THStorage.c  THStorage.h  THTensor.c  THTensor.h  THTensorMath.c  THTensorMath.h
doc/TH/: APPLY2_main.c  TH_TENSOR_APPLY2展开.c
